--- a/dev.html
+++ b/dev.html
@@ -96,7 +96,7 @@
     border-radius:18px;
     overflow:hidden;
     box-shadow: 0 20px 70px rgba(0,0,0,0.35);
-    transition: background 160ms ease, box-shadow 220ms ease;
+    transition: background 160ms ease, box-shadow 220ms ease, transform 160ms ease;
   }
 
   /* When photo background is active, make the play panel transparent so the photo shows through */
@@ -848,18 +848,6 @@ const endBtn = document.getElementById("endBtn");
 
   // ---------- Helpers ----------
   const sleep = (ms) => new Promise(res => setTimeout(res, ms));
-  async function popInflateSettle(el){
-    if(!el) return;
-    // Start tiny (not 0; Safari can glitch at 0)
-    el.style.transform = "scale(0.01)";
-    el.classList.add("visible");
-    await new Promise(r => requestAnimationFrame(() => r()));
-    // Inflate
-    el.style.transform = "scale(1.22)";
-    await sleep(90);
-    // Settle
-    el.style.transform = "scale(1)";
-  }
   const rand  = (a,b) => Math.random()*(b-a)+a;
   const clamp = (v,lo,hi) => Math.max(lo, Math.min(hi, v));
   const shuffle = (arr) => {
@@ -1496,7 +1484,7 @@ game.classList.add("goldGlow");
 
     circles.forEach(c => {
       makeCircleElement(c);
-      setCircleGeometry(c, (ROUND_RADIUS ?? RECALL_RADIUS));
+      setCircleGeometry(c, c.rShow);
       c.el.classList.remove("wrong","visible","glow");
     });
 
