--- a/dev.html
+++ b/dev.html
@@ -578,6 +578,7 @@
   <div id="game">
     <div id="arena"></div>
     <svg id="linesLayer" aria-hidden="true"></svg>
+    <div id="diagBox" style="position:absolute; left:10px; top:10px; z-index:9999; max-width:92%; padding:8px 10px; border-radius:10px; background:rgba(0,0,0,0.55); color:#fff; font:12px/1.25 ui-monospace, SFMono-Regular, Menlo, monospace; white-space:pre-wrap; display:block;"></div>
 
     <div id="photoOverlay" aria-hidden="true">
       <img id="photoOverlayImg" alt="Uploaded photo" />
@@ -1409,16 +1410,13 @@ game.classList.add("goldGlow");
   }
 
   function nonOverlappingPlacement(n) {
+    try{ diag(`place n=${n} phase=${phase} R=${(ROUND_RADIUS ?? RECALL_RADIUS).toFixed?.(2) || (ROUND_RADIUS ?? RECALL_RADIUS)}`); }catch(e){}
+
     const ar = arenaRectInGameCoords();
 
     // Place using final fixed radius (Size dial) so recall circles never overlap.
     // Pop/show circles may overlap; that's OK.
-    let R = (ROUND_RADIUS ?? RECALL_RADIUS);
-    // Clamp radius so at least one circle fits the arena (prevents stalls when Size is too large)
-    const maxR = Math.max(6, (Math.min(ar.width, ar.height) / 2) - 2);
-    if (R > maxR) R = maxR;
-    // If we had a locked radius, keep it consistent with the clamp
-    if (typeof ROUND_RADIUS !== 'undefined' && ROUND_RADIUS != null) ROUND_RADIUS = R;
+    const R = (ROUND_RADIUS ?? RECALL_RADIUS);
     const centers = [];
 
     const BUILD_ATTEMPTS = 80;
@@ -1494,7 +1492,7 @@ async function runRound(token) {
     if (token !== runToken) return;
 
     phase = "showing";
-    setStatus(`Watch the sequence… (${circles.length})`);
+    setStatus(`Watch the sequence… (${N})`);
 
     const colorOrder = shuffle([...COLOR_PALETTE]);
 
@@ -1505,14 +1503,16 @@ async function runRound(token) {
       return { ...pos, index:i, color, freq, wave, el:null };
     });
 
+    try{ diag(`circles.len=${circles.length} N=${N}`); }catch(e){}
     circles.forEach(c => {
       makeCircleElement(c);
       setCircleGeometry(c, c.rShow);
       c.el.classList.remove("wrong","visible","glow");
     });
 
-    const K = circles.length;
-    for (let i=0; i<K; i++) {
+    for (let i = 0; i < circles.length; i++) {
+      try{ diag(`show i=${i} of N=${N} circles.len=${circles.length}`); }catch(e){}
+
       if (token !== runToken) return;
       const c = circles[i];
 
@@ -1607,8 +1607,8 @@ async function runRound(token) {
         if(voice) voice.wordIndex = expectedIndex;
         try{ updateWordCountUI(); }catch(e){}
 
-        if (expectedIndex >= circles.length) onSuccess();
-        else setStatus(`Good! Next: ${expectedIndex + 1} of ${circles.length}.`);
+        if (expectedIndex >= N) onSuccess();
+        else setStatus(`Good! Next: ${expectedIndex + 1} of ${N}.`);
       } finally {
         voiceBusy = false;
       }
