--- a/dev.html
+++ b/dev.html
@@ -525,7 +525,9 @@
 </head>
 
 <body>
+<div id="diagBox" style="position:fixed; left:10px; top:70px; z-index:10001; max-width:92%; padding:8px 10px; border-radius:10px; background:rgba(0,0,0,0.75); color:#fff; font:12px/1.25 ui-monospace, SFMono-Regular, Menlo, monospace; white-space:pre-wrap;">DIAGNOSTIC LOADED\n</div>
 <header>
+  <div id="diagBanner" style="position:sticky; top:0; z-index:10000; background:#b00020; color:#fff; font:700 12px/1.2 system-ui; padding:6px 10px; text-align:center;">DIAGNOSTIC BUILD (shows errors)</div>
   <div id="controls">
     <button id="startBtn" class="primary">Play</button>
     
@@ -578,7 +580,6 @@
   <div id="game">
     <div id="arena"></div>
     <svg id="linesLayer" aria-hidden="true"></svg>
-    <div id="diagBox" style="position:absolute; left:10px; top:10px; z-index:9999; max-width:92%; padding:8px 10px; border-radius:10px; background:rgba(0,0,0,0.55); color:#fff; font:12px/1.25 ui-monospace, SFMono-Regular, Menlo, monospace; white-space:pre-wrap; display:block;"></div>
 
     <div id="photoOverlay" aria-hidden="true">
       <img id="photoOverlayImg" alt="Uploaded photo" />
@@ -1410,8 +1411,6 @@ game.classList.add("goldGlow");
   }
 
   function nonOverlappingPlacement(n) {
-    try{ diag(`place n=${n} phase=${phase} R=${(ROUND_RADIUS ?? RECALL_RADIUS).toFixed?.(2) || (ROUND_RADIUS ?? RECALL_RADIUS)}`); }catch(e){}
-
     const ar = arenaRectInGameCoords();
 
     // Place using final fixed radius (Size dial) so recall circles never overlap.
@@ -1503,7 +1502,6 @@ async function runRound(token) {
       return { ...pos, index:i, color, freq, wave, el:null };
     });
 
-    try{ diag(`circles.len=${circles.length} N=${N}`); }catch(e){}
     circles.forEach(c => {
       makeCircleElement(c);
       setCircleGeometry(c, c.rShow);
@@ -1511,7 +1509,7 @@ async function runRound(token) {
     });
 
     for (let i = 0; i < circles.length; i++) {
-      try{ diag(`show i=${i} of N=${N} circles.len=${circles.length}`); }catch(e){}
+      diag(`show i=${i} circles.len=${circles.length}`);
 
       if (token !== runToken) return;
       const c = circles[i];
