--- a/dev.html
+++ b/dev.html
@@ -525,9 +525,7 @@
 </head>
 
 <body>
-<div id="diagBox" style="position:fixed; left:10px; top:70px; z-index:10001; max-width:92%; padding:8px 10px; border-radius:10px; background:rgba(0,0,0,0.75); color:#fff; font:12px/1.25 ui-monospace, SFMono-Regular, Menlo, monospace; white-space:pre-wrap;">DIAGNOSTIC LOADED\n</div>
 <header>
-  <div id="diagBanner" style="position:sticky; top:0; z-index:10000; background:#b00020; color:#fff; font:700 12px/1.2 system-ui; padding:6px 10px; text-align:center;">DIAGNOSTIC BUILD (shows errors)</div>
   <div id="controls">
     <button id="startBtn" class="primary">Play</button>
     
@@ -619,26 +617,6 @@
 
   <input id="bgFileInput" type="file" accept="image/*" style="display:none" />
 <script>
-
-// ULTRA_EARLY_DIAG
-(function(){
-  window.__DIAG_BUF__ = window.__DIAG_BUF__ || [];
-  function push(m){ try{ window.__DIAG_BUF__.push(String(m)); }catch(e){} }
-  push("script start");
-  window.addEventListener("error", function(e){ push("ERROR early: "+e.message+" @"+e.lineno+":"+e.colno); try{ alert("JS ERROR: "+e.message); }catch(_){} });
-  window.addEventListener("unhandledrejection", function(e){ push("PROMISE early: "+String(e.reason)); });
-  function flush(){
-    var box = document.getElementById("diagBox");
-    if(!box) return;
-    var out = window.__DIAG_BUF__.slice().reverse().join("\n");
-    box.textContent = out + (out ? "\n" : "") + box.textContent;
-  }
-  if(document.readyState==="loading"){
-    document.addEventListener("DOMContentLoaded", function(){ push("DOMContentLoaded"); flush(); });
-  } else { push("DOM already ready"); try{ flush(); }catch(e){} }
-  window.__DIAG_PUSH__ = function(m){ push(m); try{ flush(); }catch(e){} };
-})();
-
 (() => {
   const game   = document.getElementById("game");
   const arena  = document.getElementById("arena");
@@ -725,8 +703,6 @@ const endBtn = document.getElementById("endBtn");
     if(!el) return;
     el.innerHTML = "";
     for(let i=0;i<5;i++){
-      try{ window.__DIAG_PUSH__ && window.__DIAG_PUSH__(`show iter i=${i} circles.len=${circles.length}`); }catch(e){}
-
       const d=document.createElement("div");
       d.className="dot";
       el.appendChild(d);
@@ -1034,6 +1010,7 @@ const endBtn = document.getElementById("endBtn");
     segments:[]        // [{start,end}] seconds, length = words
   };
 
+  const SPEAK_TIMEOUT_MS = 1200;
   // Serialize speech so timing stays in sync
   let speechQueue = Promise.resolve();
   let lastMarkTs = 0;
@@ -1193,6 +1170,9 @@ const endBtn = document.getElementById("endBtn");
     return !!(voice.audioBuffer && voice.segments && voice.segments.length);
   }
   async function _playWordNow(index){
+    // If no recorded words, do nothing
+    const segs = (voice && Array.isArray(voice.segments)) ? voice.segments : [];
+    if(!segs || !segs.length || !segs[index]) return false;
     // Plays the slice for the given word index.
     // Returns true if a word was played, false otherwise.
     if(!hasVoiceWords()) return false;
@@ -1480,26 +1460,7 @@ game.classList.add("goldGlow");
     }));
   }
 
-  function popPulse(el){
-  return new Promise((resolve)=>{
-    if(!el){ resolve(); return; }
-    try{
-      el.style.transform = "scale(0.01)";
-      requestAnimationFrame(()=>{
-        el.style.transform = "scale(1.22)";
-        setTimeout(()=>{
-          el.style.transform = "scale(1)";
-          setTimeout(resolve, 140);
-        }, 90);
-      });
-    }catch(e){ resolve(); }
-    setTimeout(resolve, 600);
-  });
-}
-
-async function runRound(token) {
-    try{ window.__DIAG_PUSH__ && window.__DIAG_PUSH__(`enter runRound N=${N} R=${RECALL_RADIUS}`); }catch(e){}
-
+  async function runRound(token) {
     // Reset misses at the start of each round
     missesUsed = 0;
     renderMisses();
@@ -1516,30 +1477,23 @@ async function runRound(token) {
 
     phase = "showing";
     setStatus(`Watch the sequence… (${N})`);
-    try{ window.__DIAG_PUSH__ && window.__DIAG_PUSH__("after status watch"); }catch(e){}
 
     const colorOrder = shuffle([...COLOR_PALETTE]);
 
-        try{ window.__DIAG_PUSH__ && window.__DIAG_PUSH__(`before placement call N=${N} R=${(ROUND_RADIUS ?? RECALL_RADIUS)}`); }catch(e){}
-circles = nonOverlappingPlacement(N).map((pos, i) => {
+    circles = nonOverlappingPlacement(N).map((pos, i) => {
       const color = colorOrder[i % colorOrder.length];
       const freq  = NOTE_FREQS[i % NOTE_FREQS.length];
       const wave  = WAVEFORMS[i % WAVEFORMS.length];
       return { ...pos, index:i, color, freq, wave, el:null };
     });
 
-        try{ window.__DIAG_PUSH__ && window.__DIAG_PUSH__(`after placement circles.len=${circles.length}`); }catch(e){}
-circles.forEach(c => {
+    circles.forEach(c => {
       makeCircleElement(c);
       setCircleGeometry(c, c.rShow);
       c.el.classList.remove("wrong","visible","glow");
     });
 
     for (let i = 0; i < circles.length; i++) {
-      try{ window.__DIAG_PUSH__ && window.__DIAG_PUSH__(`show loop i=${i} circles.len=${circles.length}`); }catch(e){}
-
-      diag(`show i=${i} circles.len=${circles.length}`);
-
       if (token !== runToken) return;
       const c = circles[i];
 
