--- a/dev.html
+++ b/dev.html
@@ -96,7 +96,7 @@
     border-radius:18px;
     overflow:hidden;
     box-shadow: 0 20px 70px rgba(0,0,0,0.35);
-    transition: background 160ms ease, box-shadow 220ms ease, transform 140ms ease;
+    transition: background 160ms ease, box-shadow 220ms ease;
   }
 
   /* When photo background is active, make the play panel transparent so the photo shows through */
@@ -105,7 +105,10 @@
   }
   #playPanel.photoBgActive #game.flashA{ background: rgba(31,47,102,0.32) !important; }
   #playPanel.photoBgActive #game.flashB{ background: rgba(13,22,51,0.38) !important; }
-  #playPanel.photoBgActive .circle{ opacity: 0.90; }
+  #playPanel.photoBgActive .circle{
+    box-sizing: border-box;
+    transform-origin: center center;
+ opacity: 0.90; }
 
 
   #game.flashA{ background: rgba(31,47,102,0.88); }
@@ -144,7 +147,6 @@
   }
 
   .circle{
-    box-sizing: border-box;
     box-sizing: border-box;
     box-sizing: border-box;
     position:absolute;
@@ -520,12 +522,24 @@
     text-align:center;
   }
 
+
+  @keyframes popIn{
+    0%   { transform: scale(0.01); }
+    60%  { transform: scale(1.22); }
+    100% { transform: scale(1); }
+  }
+  .circle.pop{
+    animation: popIn 180ms ease-out;
+  }
 </style>
+
 
 </head>
 
 <body>
+<div id="diagBox" style="position:fixed; left:10px; top:70px; z-index:10001; max-width:92%; padding:8px 10px; border-radius:10px; background:rgba(0,0,0,0.75); color:#fff; font:12px/1.25 ui-monospace, SFMono-Regular, Menlo, monospace; white-space:pre-wrap;">DIAG LOADED\n</div>
 <header>
+  <div id="diagBanner" style="position:sticky; top:0; z-index:10000; background:#b00020; color:#fff; font:700 12px/1.2 system-ui; padding:6px 10px; text-align:center;">DIAGNOSTIC BUILD (v15 show-loop)</div>
   <div id="controls">
     <button id="startBtn" class="primary">Play</button>
     
@@ -617,6 +631,15 @@
 
   <input id="bgFileInput" type="file" accept="image/*" style="display:none" />
 <script>
+
+(function(){
+  const box=()=>document.getElementById("diagBox");
+  window.__diag=function(m){ try{ const b=box(); if(!b) return; b.textContent=String(m)+"\n"+b.textContent; }catch(e){} };
+  window.addEventListener("error", (e)=>{ window.__diag(`ERROR: ${e.message} @${e.lineno}:${e.colno}`); });
+  window.addEventListener("unhandledrejection",(e)=>{ window.__diag(`PROMISE: ${String(e.reason)}`); });
+  window.__diag("script start");
+})();
+
 (() => {
   const game   = document.getElementById("game");
   const arena  = document.getElementById("arena");
@@ -1010,7 +1033,6 @@ const endBtn = document.getElementById("endBtn");
     segments:[]        // [{start,end}] seconds, length = words
   };
 
-  const SPEAK_TIMEOUT_MS = 1200;
   // Serialize speech so timing stays in sync
   let speechQueue = Promise.resolve();
   let lastMarkTs = 0;
@@ -1170,9 +1192,6 @@ const endBtn = document.getElementById("endBtn");
     return !!(voice.audioBuffer && voice.segments && voice.segments.length);
   }
   async function _playWordNow(index){
-    // If no recorded words, do nothing
-    const segs = (voice && Array.isArray(voice.segments)) ? voice.segments : [];
-    if(!segs || !segs.length || !segs[index]) return false;
     // Plays the slice for the given word index.
     // Returns true if a word was played, false otherwise.
     if(!hasVoiceWords()) return false;
@@ -1460,7 +1479,7 @@ game.classList.add("goldGlow");
     }));
   }
 
-  async function runRound(token) {
+  async function runRound(token) { try{window.__diag(`enter runRound N=${N} R=${RECALL_RADIUS}`);}catch(e){}
     // Reset misses at the start of each round
     missesUsed = 0;
     renderMisses();
@@ -1493,7 +1512,7 @@ game.classList.add("goldGlow");
       c.el.classList.remove("wrong","visible","glow");
     });
 
-    for (let i = 0; i < circles.length; i++) {
+    for (let i = 0; i < circles.length; i++) { try{window.__diag(`show iter i=${i} len=${circles.length}`);}catch(e){}
       if (token !== runToken) return;
       const c = circles[i];
 
@@ -1509,7 +1528,7 @@ game.classList.add("goldGlow");
       if (i > 0) drawLine(circles[i-1], c);
 
       c.el.classList.add("visible");
-      await popPulse(c.el);
+      triggerPop(c.el);
       c.el.classList.remove("dim");
       c.el.classList.add("active");
 
