--- a/dev.html
+++ b/dev.html
@@ -96,7 +96,7 @@
     border-radius:18px;
     overflow:hidden;
     box-shadow: 0 20px 70px rgba(0,0,0,0.35);
-    transition: background 160ms ease, box-shadow 220ms ease;
+    transition: background 160ms ease, box-shadow 220ms ease, transform 160ms ease;
   }
 
   /* When photo background is active, make the play panel transparent so the photo shows through */
@@ -144,7 +144,6 @@
   }
 
   .circle{
-    box-sizing: border-box;
     box-sizing: border-box;
     box-sizing: border-box;
     position:absolute;
@@ -1504,9 +1503,7 @@ game.classList.add("goldGlow");
       // Draw the line from previous to current (center-to-center)
       if (i > 0) drawLine(circles[i-1], c);
 
-      c.el.style.transform = "scale(1)";
-      c.el.classList.add("visible");
-      await popPulse(c.el);
+      await popInflateSettle(c.el);
       c.el.classList.remove("dim");
       c.el.classList.add("active");
 
